# functional_shopping_list

./: main.py  pyproject.toml  user_info.json
helper/: msg.py
log/: handler.toml
